Clean up options handling; give feedback on options page
Move all the "main" stuff in the NYT content script to a single section
at the bottom.

The options page now gives you some feedback when you click save,
including chrome.runtime.lastError if there was a problem. It also
validates the flush frequency.

Remove the options info from common.js. I didn't end up using it
anywhere.

--- a/chrome/options.css
+++ b/chrome/options.css
@@ -2,8 +2,8 @@ body {
   background-color: lightsteelblue;
 }
 
-.container {
-  width: 70%;
+#container {
+  width: 65%;
   margin: auto;
   padding: 10px 20px 50px 20px;
   background-color: white;
