Pass back error messages to popup alerting
If we get a failure on the popup actions, at least pass the error
message back into the status bar and log it so that we can see what's
going on.

--- a/chrome/popup.css
+++ b/chrome/popup.css
@@ -2,9 +2,14 @@ body { width: 250px; }
 
 #interactions {
   display: none;
-  grid-template-columns: auto;
-  gap: 10px;
-  margin: 0px 0px 10px 0px;
+  padding: 10px 0px;
 }
 
-#no-puzzle-message { display: none; }
+#interactions > div {
+  padding: 3px;
+}
+
+#no-puzzle-message {
+  display: none;
+  padding: 10px 0px;
+}
