Minor visual improvements to options page
Give it a feedback div so that there is some user feedback when we
delete records. Clean up some wording.

--- a/chrome/options.css
+++ b/chrome/options.css
@@ -25,9 +25,11 @@ body {
   font-weight: bold;
 }
 
-table {
+.options-set > table {
+  grid-column: span 2;
   margin: 5px auto 25px auto;
   border-collapse: collapse;
+  width: 100%;
 }
 
 th {
